tests/errors/fullasm_errors/memory_overflow/memoverflow.as
mcr sixty
.string "11111111111111111111111111111111111111111111111111111111111"
endmcr

; 100

; +600 = 700
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty

; +600 = 1300
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty

; +600 = 1900
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty

; +600 = 2500
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty

; +600 = 3100
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty

; +600 = 3700
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty
sixty

; +360 = 4060
sixty
sixty
sixty
sixty
sixty
sixty

; +35 = 4095
.string "111111111"
.string "111111111"
.string "111111111"
.string "1111"

; +1 = 4096
; this line will cause an overflow
.string ""
